<resources>
    <string name="app_name">Andy</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_username">User Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_sync">SYNC</string>
    <string name="button_save">Save</string>
    <string name="height">Height (cm)</string>
    <string name="weight">Weight (kg)</string>
    <string name="temperature">Temperature</string>
    <string name="pulse">Pulse per minute</string>
    <string name="upperBloodPressure">Upper Blood Pressure</string>
    <string name="lowerBloodPressure">Lower Blood Pressure</string>
    <string name="pref_file_name">tw.healthcare.andy.prefs</string>
    <string name="vr_height">Height (cm)</string>
    <string name="vr_weight">Weight (kg)</string>
    <string name="vr_save">Save</string>
    <string name="sample">Sample Text</string>
    <string name="vr_pulse">Pulse (per minute)</string>
    <string name="vr_temperature">Temperature (°C)</string>
    <string name="vr_blood_pressure_high">BP High</string>
    <string name="vr_blood_pressure_low">BP Low</string>

</resources>
